--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TinDog</title>
 
   <script src="https://kit.fontawesome.com/4ada23f722.js" crossorigin="anonymous"></script>
